# ammonia-wasm

./: Cargo.toml  README.md  build.ts  makefile  mod.ts  test.ts  wasm.js
pkg/: ammonia_wasm.d.ts  ammonia_wasm.js  ammonia_wasm_bg.wasm  ammonia_wasm_bg.wasm.d.ts
src/: lib.rs
